[FRON-71]: Fixing layout bugs after Angular upgrade

--- a/src/app/catalog-pro/catalog-pro-list/catalog-pro-list.component.scss
+++ b/src/app/catalog-pro/catalog-pro-list/catalog-pro-list.component.scss
@@ -105,19 +105,15 @@ tsl-spinner {
 }
 
 #catalog-empty-state {
+  display: flex;
+  align-items: center;
   padding: 0 $spacing-ms;
-  height: 103px;
+  height: 84px;
   width: 100%;
   margin-bottom: $spacing-ml;
-  mat-icon {
-    position: absolute;
-    height: auto;
-    width: 98%;
-    /deep/ svg {
-      width: 100%;
-      height: 103px;
-    }
-  }
+  background-image: url('/assets/icons/pro-items-empty-state.svg');
+  background-size: contain;
+  background-repeat: no-repeat;
   .empty-text {
     z-index: 2;
     position: absolute;
@@ -127,7 +123,6 @@ tsl-spinner {
     width: 100%;
     margin-right: auto;
     text-align: center;
-    margin-top: $spacing-xxl;
     .link {
       color: $walla-main;
       text-decoration: underline;
